z-index fix

--- a/app/sass/header/_head.scss
+++ b/app/sass/header/_head.scss
@@ -9,7 +9,7 @@
 	margin-top: 35px;
 	display: flex;
 	justify-content: space-between;
-	z: 2;
+	z-index: 2;
 
 	h2 {
 		max-width: 463px;
